--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           >
         </h1>
         <p class="lead">
-          <p>Los datos sobre México fueron recolectados a partir de los comunicados técnicos diarios y las tablas de casos confirmados de la Dirección General de Epidemiología de la Secretaría de Salud. Las tablas están disponibles en <a href="https://github.com/coronamex/datos" target="_blank">coronamex/datos</a>.</p> <p>Los datos de otros países fueron obtenidos obtenidos del <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">repositorio de la Universidad John Hopkins</a>.</p> <p>Si encuentran algún error con los datos de <a href="https://github.com/coronamex/datos/issues" target="_blank">reportarlo</a>.</p> <p>Los datos son recolectados por <a href="https://profiles.stanford.edu/sur-herrera-paredes" target="_blank"> Sur Herrera Paredes</a> y se actualizan cada noche alrededor de las 19:00 GMT-6</p>
+          <p>Los datos de México fueron recolectados a partir de los comunicados técnicos diarios y las tablas de casos confirmados de la Dirección General de Epidemiología de la Secretaría de Salud. Las tablas están disponibles en <a href="https://github.com/coronamex/datos" target="_blank">coronamex/datos</a>.</p> <p>Los datos de otros países fueron obtenidos obtenidos del <a href="https://github.com/CSSEGISandData/COVID-19" target="_blank">repositorio de la Universidad John Hopkins</a>.</p> <p>Si encuentran algún error con los datos favor de <a href="https://github.com/coronamex/datos/issues" target="_blank">reportarlo</a>.</p> <p>Los datos son recolectados por <a href="https://profiles.stanford.edu/sur-herrera-paredes" target="_blank"> Sur Herrera Paredes</a> y se actualizan cada noche alrededor de las 19:00 GMT-6</p>
         </p>
       </div>
     
@@ -344,7 +344,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Casos acumulados</h2>
         <p class="lead">
-          <p>Esta gráfica compara el avance de la  edpidemia entre varios paises a partir del día en que cada país detectó al caso 60.</p> <p>El eje verical de la gráfica está en escala logarítmica. Esto significa que si el crecimiento se ve como una línea recta se trata en realidad de un aumento exponencial en el número de casos.</p>
+          <p>Esta gráfica compara el avance de la  epidemia entre varios países a partir del día en que cada país detectó al caso 60.</p> <p>El eje verical de la gráfica está en escala logarítmica. Esto significa que si el crecimiento se ve como una línea recta se trata en realidad de un aumento exponencial en el número de casos.</p>
         </p>
         
 	
@@ -371,7 +371,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Muertes acumuladas</h2>
         <p class="lead">
-          <p>Esta gráfica es similar a la anterior pero compara el número total de muertes en varios paises a partir de que cada pais detectó al caso 60.</p> <p>El número de muertes es mucho más variable que el número de casos. Esto sucede porque la letalidad de una enfermedad no sólo depende de la tasa de infección sino también otros factores como la frequencia de comorbilidades y la calidad de los servicios médicos, entre otros.</p>
+          <p>Esta gráfica es similar a la anterior pero compara el número total de muertes en varios países a partir de que cada país detectó al caso 60.</p> <p>El número de muertes es mucho más variable que el número de casos. Esto sucede porque la letalidad de una enfermedad no sólo depende de la tasa de infección sino también otros factores como la frequencia de comorbilidades y la calidad de los servicios médicos, entre otros.</p>
         </p>
       </div>
     </div>
