Haciendi imágnes más cuadradas que funciona mejor con el diseño

--- a/404.html
+++ b/404.html
@@ -308,7 +308,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="https://coronamex.github.io">INICIO DE SÍNTOMAS</a>
+          <a class="nav-link" href="https://coronamex.github.io">CASOS EN MÉXICO</a>
         </li>
         
       </ul>
