Añadiendo versiones de imágenes
Para mejor adaptación al tamaño de la pantalla

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.jpeg 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia.jpeg 2x"
+          data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.jpeg 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia@2x.jpeg 2x"
           alt="Curva de casos acumulados"
         />
       </div>
@@ -363,7 +363,7 @@
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.jpeg 1x, https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.jpeg 2x"
+          data-srcset="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.jpeg 1x, https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia@2x.jpeg 2x"
           alt="Profile Picture"
         />
       </div>
@@ -388,7 +388,7 @@
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.jpeg 1x, https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.jpeg 2x"
+          data-srcset="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.jpeg 1x, https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional@2x.jpeg 2x"
           alt="Profile Picture"
         />
       </div>
