--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
 
 <title>CoronaMex</title>
+<meta name="description" content="Datos y Análsisi sobre el COVID-19 en México">
+<meta charset="UTF-8">
+<meta name="author" content="Sur Herrera Paredes">
 <style>
      
     .rad-fade-in {
@@ -397,6 +400,32 @@
         <p class="lead">
           <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p> <p>Debido a que pueden pasar hasta dos semanas para que las personas infectadas muestren síntomas, no podemos saber el número real de nuevas infecciones en los últimos días.</p>
         </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+  
+<section class="section rad-animation-group pb-0" id="estados">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/casos_100mil_estados.jpeg"
+          data-srcset="https://coronamex.github.io/imagenes/casos_100mil_estados.jpeg 1x, https://coronamex.github.io/imagenes/casos_100mil_estados@2x.jpeg 2x"
+          alt="Casos por 100 mil habitantes por estado"
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2>Situación en los estados</h2>
+        <p class="lead">
+          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto a penetrado la epidemia en una región</[]> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los últimos días en varias entidades federativas.</p> <p>Sólo se muestran entidades federativas con al menos 1 caso por 100 mil habitantes</p>
+        </p>
+	
       </div>
     </div>
   </div>
