--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Situación en los estados</h2>
         <p class="lead">
-          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región</[]> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los últimos días en varias entidades federativas.</p> <p>Sólo se muestran entidades federativas con al menos 1 caso por 100 mil habitantes</p>
+          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región</[]> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los 10 últimos días en las entidades federativas con al menos 1 caso por 100 mil habitantes.</p>
         </p>
 	
       </div>
