Mostrando todos los estados. JPEG a PNG

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
         <img
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://coronamex.github.io/imagenes/incremento_por_casos.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/incremento_por_casos.jpeg 1x, https://coronamex.github.io/imagenes/incremento_por_casos@2x.jpeg 2x"
+          data-src="https://coronamex.github.io/imagenes/incremento_por_casos.png"
+          data-srcset="https://coronamex.github.io/imagenes/incremento_por_casos.png 1x, https://coronamex.github.io/imagenes/incremento_por_casos@2x.png 2x"
           alt="Curva de mejor_curva acumulados"
         />
       </div>
@@ -359,8 +359,8 @@
         <img
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.jpeg 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia@2x.jpeg 2x"
+          data-src="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png"
+          data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia@2x.png 2x"
           alt="Curva de casos acumulados"
         />
       </div>
@@ -385,8 +385,8 @@
         <img
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.jpeg 1x, https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia@2x.jpeg 2x"
+          data-src="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.png"
+          data-srcset="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.png 1x, https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia@2x.png 2x"
           alt="Profile Picture"
         />
       </div>
@@ -410,8 +410,8 @@
         <img
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.jpeg 1x, https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional@2x.jpeg 2x"
+          data-src="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.png"
+          data-srcset="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.png 1x, https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional@2x.png 2x"
           alt="Profile Picture"
         />
       </div>
@@ -435,15 +435,15 @@
         <img
           class="lozad img-responsive image-left-overflow"
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://coronamex.github.io/imagenes/casos_100mil_estados.jpeg"
-          data-srcset="https://coronamex.github.io/imagenes/casos_100mil_estados.jpeg 1x, https://coronamex.github.io/imagenes/casos_100mil_estados@2x.jpeg 2x"
+          data-src="https://coronamex.github.io/imagenes/casos_100mil_estados.png"
+          data-srcset="https://coronamex.github.io/imagenes/casos_100mil_estados.png 1x, https://coronamex.github.io/imagenes/casos_100mil_estados@2x.png 2x"
           alt="Casos por 100 mil habitantes por estado"
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Situación en los estados</h2>
         <p class="lead">
-          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región</[]> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los 10 últimos días en las entidades federativas con al menos 1 caso por 100 mil habitantes.</p>
+          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región</[]> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los 10 últimos días en las 32 entidades federativas del país.</p>
         </p>
 	
       </div>
