comunitarios vs importados

--- a/index.html
+++ b/index.html
@@ -428,6 +428,32 @@
 
 
   
+<section class="section rad-animation-group pb-0" id="comunitarios">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/casos_acumulados_comunitarios_importados.png"
+          data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_comunitarios_importados.png 1x, https://coronamex.github.io/imagenes/casos_acumulados_comunitarios_importados@2x.png 2x"
+          alt="Curva de comunitarios acumulados"
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2>La epidemia se acelera</h2>
+        <p class="lead">
+          <p>La <a href="#casos">curva epidemiológica</a> sugiere que los casos en México han crecido más lentamente que en otros países. Sin embargo las primeras semanas de la epidemia se se constituyeron casi enteramente de casos importados.</p> <p>Cuando miramos los casos de transmisión comunitaria podemos ver que están creciendo a mayor velocidad que los casos importados.</p> <p>Por eso es crítico seguir las recomendaciones de la sana distancia y <strong>Quedarse en casa</strong>.</p>
+        </p>
+	
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+  
 <section class="section rad-animation-group pb-0" id="estados">
   <div class="container rad-fade-down">
     <div class="row d-flex flex-column-reverse flex-md-row">
