--- a/index.html
+++ b/index.html
@@ -416,10 +416,36 @@
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
-        <h2>Casos en México</h2>
+        <h2>Casos confirmados en México</h2>
         <p class="lead">
-          <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p> <p>Debido a que pueden pasar hasta dos semanas para que las personas infectadas muestren síntomas, no podemos saber el número real de nuevas infecciones en los últimos días.</p>
+          <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p> <p>Debido a que pueden pasar hasta dos semanas para que las personas infectadas muestren síntomas, no tenemos el número real de nuevas infecciones en los últimos días.</p> <p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="#sir">estimar</a> el número de casos en la actualidad</p>
         </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+  
+<section class="section rad-animation-group pb-0" id="sir">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/sir_nacional.png"
+          data-srcset="https://coronamex.github.io/imagenes/sir_nacional.png 1x, https://coronamex.github.io/imagenes/sir_nacional@2x.png 2x"
+          alt="Curva de sir acumulados"
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2>¿Cuántos casos hay en México?</h2>
+        <p class="lead">
+          <p>Esta gráfica muestra el número total de casos por la fecha en que <span style="background-color: #7570b3">iniciaron sus síntomas</span> y la fecha en que se <span style="background-color: #1b9e77">confirmó</span> el caso. Las líneas <span style="background-color: #d95f02">marrones</span> muestran las estimaciones del número de casos totales basadas en un de un <a href="https://gabgoh.github.io/COVID/index.html" target="_blank">modelo epidemiológico</a>. Las diferentes líneas muestran los resultados con diferentes parámetros.</p> <p>Hay varias fuentes de incertidumbre: 1) los casos importados hacen que sobrestimemos el número de casos, 2) los casos que no detecta el gobierno (ej. asintomáticos) hacen que subestimemos el número de casos, 3) la jornada nacional de sana distancia inició el 23 de marzo y podría haber tenido un efecto, pero todavía es muy pronto para medirlo.</p> <p>El código para ajustar, simular y graficar el modelo está <a href="https://github.com/coronamex/visualizando/blob/master/sir/sir.r" target="_blank">aquí</a>.</p>
+        </p>
+	
       </div>
     </div>
   </div>
