Añadiendo inicio de comunitarios

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Casos acumulados</h2>
         <p class="lead">
-          <p>Esta gráfica compara el avance de la  epidemia entre varios países a partir del día en que cada país detectó al caso 60.</p> <p>El eje verical de la gráfica está en escala logarítmica. Esto significa que si el crecimiento se ve como una línea recta se trata en realidad de un aumento exponencial en el número de casos.</p>
+          <p>Esta gráfica compara el avance de la  epidemia entre varios países a partir del día en que cada país detectó al caso 60.</p> <p>El eje verical de la gráfica está en escala logarítmica. Esto significa que si el crecimiento se ve como una línea recta, se trata en realidad de un aumento exponencial en el número de casos.</p>
         </p>
 	
       </div>
@@ -393,7 +393,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Muertes acumuladas</h2>
         <p class="lead">
-          <p>Esta gráfica es similar a la anterior pero compara el número total de muertes en varios países a partir de que cada país detectó al caso 60.</p> <p>El número de muertes es mucho más variable que el número de casos. Esto sucede porque la letalidad de una enfermedad no sólo depende de la tasa de infección sino también otros factores como la frequencia de comorbilidades y la calidad de los servicios médicos, entre otros.</p>
+          <p>Esta gráfica es similar a la anterior, pero compara el número total de muertes en varios países a partir de que cada país detectó al caso 60.</p> <p>El número de muertes es mucho más variable que el número de casos. Esto sucede porque  hay menos muertes que casos, pero también porque la letalidad de una enfermedad no sólo depende de la tasa de infección sino también otros factores como la frecuencia de comorbilidades y la calidad de los servicios médicos, entre otros.</p>
         </p>
       </div>
     </div>
@@ -495,7 +495,33 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Situación en los estados</h2>
         <p class="lead">
-          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región</[]> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los 10 últimos días en las 32 entidades federativas del país.</p>
+          <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región.</p> <p>Esta gráfica muestra el número de casos por cada 100 mil habitantes (población de 2015) en los 10 últimos días en las 32 entidades federativas del país.</p>
+        </p>
+	
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+  
+<section class="section rad-animation-group pb-0" id="inicio_comunitarios">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/inicio_comunitarios.png"
+          data-srcset="https://coronamex.github.io/imagenes/inicio_comunitarios.png 1x, https://coronamex.github.io/imagenes/inicio_comunitarios@2x.png 2x"
+          alt="Curva de inicio_comunitarios acumulados"
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2>¿Cuándo inició la transmisión comunitaria?</h2>
+        <p class="lead">
+          <p>El primer caso en México de una persona que no viajó al extranjero mostró síntomas el 17 de febrero en la Ciudad de México. Para el 25 de marzo, todos los estados habían detectado al menos un caso de este tipo.</p> <p>Para cuando iniciaron las medidas de sana distancia (23 de marzo), 30 de los 32 estados ya tenían transmisión comunitaria. Sin embargo, los datos oficiales mostraban 17 estados con este tipo de casos.</p> <p>En general hubo una mediana de 10 días de retraso entre el inicio de la transmisión comunitaria en una entidad y su detección.</p> <p>NOTA: Los datos de detección antes del 14 de marzo están incompletos. Es posible que la detección de transmisión comunitaria en la CdMX o en Querétaro haya ocurrido antes.</p>
         </p>
 	
       </div>
