--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>La epidemia se acelera</h2>
         <p class="lead">
-          <p>La <a href="#casos">curva epidemiológica</a> sugiere que los casos en México han crecido más lentamente que en otros países. Sin embargo las primeras semanas de la epidemia se se constituyeron casi enteramente de casos importados.</p> <p>Cuando miramos los casos de transmisión comunitaria podemos ver que están creciendo a mayor velocidad que los casos importados.</p> <p>Por eso es crítico seguir las recomendaciones de la sana distancia y <strong>Quedarse en casa</strong>.</p>
+          <p>La <a href="#casos">curva epidemiológica</a> sugiere que los casos en México han crecido más lentamente que en otros países. Sin embargo las primeras semanas de la epidemia se se constituyeron casi enteramente de casos importados.</p> <p>Cuando miramos los casos de transmisión comunitaria podemos ver que están creciendo a mayor velocidad que los casos importados.</p> <p>Por eso es crítico seguir las recomendaciones de la sana distancia y <strong>Quedarse en casa</strong>.</p> <p>NOTA: El 2020-04-06 la Secretaría de Salud dejó de proveer la fecha de llegada a México de los casos confirmados. Esto hace más difícil distinguir entre casos comunitarios e importados. Es posible que los números en esta gráfica no sean del todo precisos, pero las tendencias son claras.</p>
         </p>
 	
       </div>
@@ -521,7 +521,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>¿Cuándo inició la transmisión comunitaria?</h2>
         <p class="lead">
-          <p>El primer caso en México de una persona que no viajó al extranjero mostró síntomas el 17 de febrero en la Ciudad de México. Para el 25 de marzo, todos los estados habían detectado al menos un caso de este tipo.</p> <p>Para cuando iniciaron las medidas de sana distancia (23 de marzo), 30 de los 32 estados ya tenían transmisión comunitaria. Sin embargo, los datos oficiales mostraban 17 estados con este tipo de casos.</p> <p>En general hubo una mediana de 10 días de retraso entre el inicio de la transmisión comunitaria en una entidad y su detección.</p> <p>NOTA: Los datos de detección antes del 14 de marzo están incompletos. Es posible que la detección de transmisión comunitaria en la CdMX o en Querétaro haya ocurrido antes.</p>
+          <p>El primer caso en México de una persona que no viajó al extranjero mostró síntomas el 17 de febrero en la Ciudad de México. Para el 25 de marzo, todos los estados habían detectado al menos un caso de este tipo.</p> <p>Para cuando iniciaron las medidas de sana distancia (23 de marzo), 30 de los 32 estados ya tenían transmisión comunitaria. Sin embargo, los datos oficiales mostraban 17 estados con este tipo de casos.</p> <p>En general hubo una mediana de 10 días de retraso entre el inicio de la transmisión comunitaria en una entidad y su detección.</p> <p>NOTA: Los datos de detección antes del 14 de marzo están incompletos. Es posible que la detección de transmisión comunitaria en la CdMX o en Querétaro haya ocurrido antes.</p> <p>NOTA2: Esta gráfica usa datos hasta 2020-04-05 porque la Secretaría de salud dejó de presentar información completa el 2020-04-06, haciendo más imprecisa la distinción entre casos comunitarios e importados.</p>
         </p>
 	
       </div>
