--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Aplanando la curva</h2>
         <p class="lead">
-          <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar cuantos nuevos casos habrá en los próximos días.</p> <p>Esta gráfica muestra el crecimiento diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p> <p>La gráfica muestra que la epidemia en <span style="background-color: #cab2d6">México</span> ha crecido algo más lentamente que si fuera exponencial (porque la línea decrece). Sin embargo, esta tendencia puede cambiar en cualquier momento como pasó en varios países. Por eso es importante <strong>Quedarse en Casa</strong>.</p>
+          <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar cuantos nuevos casos habrá en los próximos días.</p> <p>Esta gráfica muestra el crecimiento diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p> <p>La gráfica muestra que después de semanas de crecimiento sub-exponencial, la epidemia en <span style="background-color: #cab2d6">México</span> se está acelerando. Por eso es importante <strong>Quedarse en Casa Ya</strong>.</p>
         </p>
 	
       </div>
