Añadiendo diagrama letalidad

--- a/index.html
+++ b/index.html
@@ -532,6 +532,32 @@
 
 
 
+  
+<section class="section rad-animation-group pb-0" id="letalidad">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/letalidad_diagrama.png"
+          data-srcset="https://coronamex.github.io/imagenes/letalidad_diagrama.png 1x, https://coronamex.github.io/imagenes/letalidad_diagrama@2x.png 2x"
+          alt="Curva de letalidad acumulados"
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2>¿Cómo se interpreta la letalidad?</h2>
+        <p class="lead">
+          <p>La letalidad es la proporción de gente enferma que termina falleciendo. Es un parámetro importante pero es casi imposible medirlo en tiempo real. Esto se ilustra con una simulación. Si pudiéramos medir todos los nuevos casos instantáneamente, terminaríamos subestimando la verdadera letalidad. Por otro lado, el retraso entre la aparición de un caso y su detección provoca que sobrestimemos la verdadera letalidad.</p> <p>En el mundo real, el cálculo es todavía más complicado porque no detectamos todos los casos, y porque variaciones regionales causan diferentes tipos de error.</p> <p>La simulación muestra que es posible estimar la letalidad de manera retrospectiva, una vez que no hay nuevos casos. Usando este principio, podemos usar la letalidad del COVID-19 en China (4.2%) y Corea del Sur (1.1%) para darnos una idea de lo que podemos esperar. La diferencia de 3% es el efecto entre la eficiencia de las medidas de mitigación. <strong>Quédate en Casa</strong>.</p>
+        </p>
+	
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 	
 
 	<footer class="footer">
