Añadiendo descripciones "alt" a gráficas

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/incremento_por_casos.png"
           data-srcset="https://coronamex.github.io/imagenes/incremento_por_casos.png 1x, https://coronamex.github.io/imagenes/incremento_por_casos@2x.png 2x"
-          alt="Curva de mejor_curva acumulados"
+          alt="Crecimiento de la epidemia del COVID-19 en varios países. La gráfica muestra el crecimiento porcentual diario (promediado durante los siete días anteriores) en el número de casos como una función del número total de casos en cada país."
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
@@ -368,7 +368,7 @@
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png"
           data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia@2x.png 2x"
-          alt="Curva de casos acumulados"
+          alt="Curva epidemiológica. Muestra el número de casos acumulados de COVID-19 en varios países a partir del día en que se confirmó el caso 60 en cada país."
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
@@ -394,7 +394,7 @@
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.png"
           data-srcset="https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia.png 1x, https://coronamex.github.io/imagenes/muertes_acumuladas_por_dia@2x.png 2x"
-          alt="Profile Picture"
+          alt="Curva que muestra el número de muertes acumuladas por COVID-19 en varios países a partir del día en que se confirmó el caso sesenta en cada país."
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
@@ -419,7 +419,7 @@
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.png"
           data-srcset="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.png 1x, https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional@2x.png 2x"
-          alt="Profile Picture"
+          alt="Número de casos de COVID-19 en México que empezaron a mostrar síntomas en cada fecha desde el inicio de la epidemia. Debido a que los contagiados pueden tardar hasta 15 días en mostrar síntomas parece que hay menos nuevos casos en días recientes pero estos números probablemente aumentarán en los próxios días."
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
@@ -444,7 +444,7 @@
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
           data-src="https://coronamex.github.io/imagenes/sir_nacional.png"
           data-srcset="https://coronamex.github.io/imagenes/sir_nacional.png 1x, https://coronamex.github.io/imagenes/sir_nacional@2x.png 2x"
-          alt="Curva de sir acumulados"
+          alt="Resultados del modelos epidemiológico compartamentalizado SEIR. El modelo se ajusta con datos de COVID-19 en Méxido a nivel nacional hasta la fecha indicada. Además el modelo asume que el número reproductivo básico (R0) disminuye a partir de las medidas de mitigación. Los tiempos de infección y de incubación son explorados en una matriz de valores, mientras que R0 y el efecto de las medidas de mitigación son optimizados por mínimos cuadrados. El ajuste de datos utiliza las fechas de inicio de síntomas proporcionados por el InDRE de la Dirección General de Epidemiología en la fecha más reciente."
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
