Añadiendo tiempo entre síntomas y muerte

--- a/index.html
+++ b/index.html
@@ -409,6 +409,31 @@
 
 
 
+  
+<section class="section rad-animation-group pb-0" id="tiempo_muerte">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/tiempo_defuncion.png"
+          data-srcset="https://coronamex.github.io/imagenes/tiempo_defuncion.png 1x, https://coronamex.github.io/imagenes/tiempo_defuncion@2x.png 2x"
+          alt="Distribución del tiempo en días desde el inicio de síntomas hasta la defunción."
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2></h2>
+        <p class="lead">
+          <p>En México, el número de días entre el incio de síntomas de COVID-19 y el fallecimiento tiene una mediana de 9 días. Este número es similar la mediana de 10 días reportada en <a href="https://www.epicentro.iss.it/en/coronavirus/bollettino/Report-COVID-2019_2_april_2020.pdf" target="_blank">un estudio sobre Italia</a>, pero menor que la mediana de 14 días reportada entre <a href="" target="_blank">algunos de los primeros casos en China</a>.</p> <p>Aunque el riesgo está asociado con varias comorbilidades, sexo y edad, ninguno de estos factores tiene una asociación estadísticamente significativa con la duración del intervalo entre aparición de síntomas y el fallecimiento. Esto podría deberse a que hay relativamente pocos fallecimientos en México.</p>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 	
 <section class="section rad-animation-group pb-0" id="nacional_sintomas">
   <div class="container rad-fade-down">
