--- a/index.html
+++ b/index.html
@@ -434,6 +434,32 @@
 
 
 
+  
+<section class="section rad-animation-group pb-0" id="riesgos_relativos">
+  <div class="container rad-fade-down">
+    <div class="row d-flex flex-column-reverse flex-md-row">
+      <div class="about__profile-picture col-12 col-md-6">
+        <img
+          class="lozad img-responsive image-left-overflow"
+          src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+          data-src="https://coronamex.github.io/imagenes/riesgos_relativos.png"
+          data-srcset="https://coronamex.github.io/imagenes/riesgos_relativos.png 1x, https://coronamex.github.io/imagenes/riesgos_relativos@2x.png 2x"
+          alt="Riesgo relativo de hospitalización y de entrar a cuidados intensivos por COVID-19 basado en los casos en México. El estimador de máxima verosimilitud y el intervalo de confianza de 95% son mostrados."
+        />
+      </div>
+      <div class="col-12 col-md-6 my-auto my-auto">
+        <h2>¿Quién está en riesgo?</h2>
+        <p class="lead">
+          <p><strong>Todos estamos en riesgo</strong>. Para el 15 de abril, 98 de las 449 (21%) personas que han fallecido en México por COVID-19 no tenían ninguno de los factores de riesgo reportados. Sin embargo ciertos factores pueden hacer más probable que un paciente de COVID-19 tenga una enfermedad grave.</p> <p>En México, podemos calcular el riesgo relativo de que pacientes con COVID-19 tengan que ser hospitalizados o llevados a la unidad de cuidados intensivos. Diabetes, enfermedad pulmonar obstructiva crónica (EPOC), insuficiencia renal crónica, e hipertensión más o menos duplican el riesgo para los pacientes. El asma no tiene una asociación significativa con el riesgo, lo cual puede parecer raro pero hasta el momento <a href="https://www.aaaai.org/conditions-and-treatments/library/asthma-library/covid-asthma" target="_blank">no hay</a> <a href="https://time.com/5802423/coronvirus-asthma-high-risk/" target="_blank">evidencia</a> de que gente con asma tenga un mayor riesgo que los demás. Simplemente <strong>todos debemos extremar precauciones</strong>.</p>
+        </p>
+	
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 	
 <section class="section rad-animation-group pb-0" id="nacional_sintomas">
   <div class="container rad-fade-down">
