--- a/secciones/principal/index.html
+++ b/secciones/principal/index.html
@@ -521,9 +521,9 @@
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/casos_100mil_estados@2x.png"
-              data-srcset="https://coronamex.github.io/imagenes/casos_100mil_estados@2x.png 1x, https://coronamex.github.io/imagenes/casos_100mil_estados.png 2x"
-              alt="imagenes/casos_100mil_estados@2x.png"
+              data-src="https://coronamex.github.io/imagenes/casos_100mil_estados.png"
+              data-srcset="https://coronamex.github.io/imagenes/casos_100mil_estados.png 1x, https://coronamex.github.io/imagenes/casos_100mil_estados@2x.png 2x"
+              alt=""
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
